--- a/drum-kit-js/index.html
+++ b/drum-kit-js/index.html
@@ -10,27 +10,29 @@
 <body>
     <div class="main-container">
         <div class="key-container">
-            <div id="key" data-key="65"></div>
-            <div id="key" data-key="83"></div>
-            <div id="key" data-key="68"></div>
-            <div id="key" data-key="70"></div>
-            <div id="key" data-key="71"></div>
-            <div id="key" data-key="72"></div>
-            <div id="key" data-key="74"></div>
-            <div id="key" data-key="75"></div>
-            <div id="key" data-key="76"></div>
+            <div id="key" data-key="65">A</div>
+            <div id="key" data-key="83">S</div>
+            <div id="key" data-key="68">D</div>
+            <div id="key" data-key="70">F</div>
+            <div id="key" data-key="71">G</div>
+            <div id="key" data-key="72">H</div>
+            <div id="key" data-key="74">J</div>
+            <div id="key" data-key="75">K</div>
+            <div id="key" data-key="76">L</div>
         </div>
     </div>
 
-    <audio src="sounds/banana-clap.wav" data-key="65"></audio>
-    <audio src="" data-key=""></audio></audio>
-    <audio src="" data-key=""></audio></audio>
-    <audio src="" data-key=""></audio></audio>
-    <audio src="" data-key=""></audio></audio>
-    <audio src="" data-key=""></audio></audio>
-    <audio src="" data-key=""></audio></audio>
-    <audio src="" data-key=""></audio></audio>
-    <audio src="" data-key=""></audio></audio>
+    <audio src="sounds/soft_hit_chime.mp3" data-key="65"></audio>
+    <audio src="sounds/single_hit.mp3" data-key=""></audio></audio>
+    <audio src="sounds/plastic_ruler_twang.mp3" data-key=""></audio></audio>
+    <audio src="sounds/hit_stick_single.mp3" data-key=""></audio></audio>
+    <audio src="sounds/hit_soft.mp3" data-key=""></audio></audio>
+    <audio src="sounds/guitar_strings.mp3" data-key=""></audio></audio>
+    <audio src="sounds/comedy_swipe.mp3" data-key=""></audio></audio>
+    <audio src="sounds/cartoon_ping_twang.mp3" data-key=""></audio></audio>
+    <audio src="sounds/cartoon_bubbles.mp3" data-key=""></audio></audio>
+
+    <div class="footer">BENI'S MINI PROJECTS</div>
 
     <script src="index.js"></script>
 </body>
