buttons working, css almost done

--- a/drum-kit-js/index.html
+++ b/drum-kit-js/index.html
@@ -23,14 +23,14 @@
     </div>
 
     <audio src="sounds/soft_hit_chime.mp3" data-key="65"></audio>
-    <audio src="sounds/single_hit.mp3" data-key=""></audio></audio>
-    <audio src="sounds/plastic_ruler_twang.mp3" data-key=""></audio></audio>
-    <audio src="sounds/hit_stick_single.mp3" data-key=""></audio></audio>
-    <audio src="sounds/hit_soft.mp3" data-key=""></audio></audio>
-    <audio src="sounds/guitar_strings.mp3" data-key=""></audio></audio>
-    <audio src="sounds/comedy_swipe.mp3" data-key=""></audio></audio>
-    <audio src="sounds/cartoon_ping_twang.mp3" data-key=""></audio></audio>
-    <audio src="sounds/cartoon_bubbles.mp3" data-key=""></audio></audio>
+    <audio src="sounds/single_hit.mp3" data-key="83"></audio></audio>
+    <audio src="sounds/plastic_ruler_twang.mp3" data-key="68"></audio></audio>
+    <audio src="sounds/hit_stick_single.mp3" data-key="70"></audio></audio>
+    <audio src="sounds/hit_soft.mp3" data-key="71"></audio></audio>
+    <audio src="sounds/guitar_strings.mp3" data-key="72"></audio></audio>
+    <audio src="sounds/comedy_swipe.mp3" data-key="74"></audio></audio>
+    <audio src="sounds/cartoon_ping_twang.mp3" data-key="75"></audio></audio>
+    <audio src="sounds/cartoon_bubbles.mp3" data-key="76"></audio></audio>
 
     <div class="footer">BENI'S MINI PROJECTS</div>
 
