--- a/drum-kit-js/index.html
+++ b/drum-kit-js/index.html
@@ -10,19 +10,19 @@
 <body>
     <div class="main-container">
         <div class="key-container">
-            <div id="key" data-key="65">A</div>
-            <div id="key" data-key="83">S</div>
-            <div id="key" data-key="68">D</div>
-            <div id="key" data-key="70">F</div>
-            <div id="key" data-key="71">G</div>
-            <div id="key" data-key="72">H</div>
-            <div id="key" data-key="74">J</div>
-            <div id="key" data-key="75">K</div>
-            <div id="key" data-key="76">L</div>
+            <div class="key" data-key="65">A</div>
+            <div class="key" data-key="83">S</div>
+            <div class="key" data-key="68">D</div>
+            <div class="key" data-key="70">F</div>
+            <div class="key" data-key="71">G</div>
+            <div class="key" data-key="72">H</div>
+            <div class="key" data-key="74">J</div>
+            <div class="key" data-key="75">K</div>
+            <div class="key" data-key="76">L</div>
         </div>
     </div>
 
-    <audio src="sounds/soft_hit_chime.mp3" data-key="65"></audio>
+    <audio src="sounds/hit_soft.mp3" data-key="65"></audio>
     <audio src="sounds/single_hit.mp3" data-key="83"></audio></audio>
     <audio src="sounds/plastic_ruler_twang.mp3" data-key="68"></audio></audio>
     <audio src="sounds/hit_stick_single.mp3" data-key="70"></audio></audio>
@@ -32,7 +32,7 @@
     <audio src="sounds/cartoon_ping_twang.mp3" data-key="75"></audio></audio>
     <audio src="sounds/cartoon_bubbles.mp3" data-key="76"></audio></audio>
 
-    <div class="footer">BENI'S MINI PROJECTS</div>
+    <div class="footer">Beni's mini projects</div>
 
     <script src="index.js"></script>
 </body>
