--- a/css-js-analog-clock/index.html
+++ b/css-js-analog-clock/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">Beni's mini projects</div>
+    <div class="header">Beni's javascript30 project 2</div>
     <div class="clock">
         <div class="hand seconds-hand"></div>
         <div class="hand mins-hand"></div>
