--- a/pic-carousel-js/index.html
+++ b/pic-carousel-js/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="title">Mini Projects <span>by</span> Beni</h1>
+    <h1 class="title">mini projects <span>by</span> Beni</h1>
     <div class="main-container">
         <div class="images">
             <button type="button" class="btn prevBtn">Previous Image</button>
