--- a/drum-kit-js/index.html
+++ b/drum-kit-js/index.html
@@ -32,7 +32,9 @@
     <audio src="sounds/cartoon_ping_twang.mp3" data-key="75"></audio></audio>
     <audio src="sounds/cartoon_bubbles.mp3" data-key="76"></audio></audio>
 
-    <div class="footer">Beni's mini projects</div>
+    <div class="footer">
+        <h1 class="title">mini projects <span>by</span> Beni</h1>
+    </div>
 
     <script src="index.js"></script>
 </body>
